force-app/main/default/objects/OrcamentoCompetencia__c/OrcamentoCompetencia__c.object-meta.xml
<CustomObject>
    <description>Orçamento mensal por competência e profissional alocado.</description>
    <label>Orçamento Competência</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>ID Orçamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orçamentos Competência</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>