force-app/main/default/objects/OrcamentoCompetencia__c/fields/Alocacao__c.field-meta.xml
<CustomField>
    <fullName>Alocacao__c</fullName>
    <description>Alocação pai deste orçamento mensal.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alocação</label>
    <referenceTo>Alocacao__c</referenceTo>
    <relationshipLabel>Orçamentos Competência</relationshipLabel>
    <relationshipName>OrcamentosCompetencia</relationshipName>
    <type>Lookup</type>
</CustomField>