force-app/main/default/objects/OrcamentoCompetencia__c/fields/AlocacaoPrevista__c.field-meta.xml
<CustomField>
    <fullName>AlocacaoPrevista__c</fullName>
    <label>Alocação Prevista</label>
    <type>Lookup</type>
    <referenceTo>AlocacaoPrevista__c</referenceTo>
    <relationshipLabel>Orçamentos Competência</relationshipLabel>
    <relationshipName>OrcamentosCompetencia</relationshipName>
</CustomField>