force-app/main/default/objects/OrcamentoCompetencia__c/fields/Competencia__c.field-meta.xml
<CustomField>
    <fullName>Competencia__c</fullName>
    <description>Data de referência (geralmente dia 1 do mês).</description>
    <label>Competência</label>
    <required>true</required>
    <type>Date</type>
</CustomField>