force-app/main/default/objects/OrcamentoCompetencia__c/fields/CustoPrevisto__c.field-meta.xml
<CustomField>
    <fullName>CustoPrevisto__c</fullName>
    <label>Custo Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>