force-app/main/default/objects/OrcamentoCompetencia__c/fields/HorasPrevistas__c.field-meta.xml
<CustomField>
    <fullName>HorasPrevistas__c</fullName>
    <label>Horas Previstas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>