force-app/main/default/objects/OrcamentoCompetencia__c/fields/HorasRealizadas__c.field-meta.xml
<CustomField>
    <fullName>HorasRealizadas__c</fullName>
    <label>Horas Realizadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>