force-app/main/default/objects/OrcamentoCompetencia__c/fields/ReceitaPrevista__c.field-meta.xml
<CustomField>
    <fullName>ReceitaPrevista__c</fullName>
    <label>Receita Prevista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>