force-app/main/default/objects/OrcamentoCompetencia__c/fields/ReceitaRealizada__c.field-meta.xml
<CustomField>
    <fullName>ReceitaRealizada__c</fullName>
    <description>Soma das distribuições de receita realizadas via parcelas faturadas.</description>
    <label>Receita Realizada</label>
    <summarizedField>DistribuicaoReceita__c.ValorDistribuido__c</summarizedField>
    <summaryForeignKey>DistribuicaoReceita__c.OrcamentoCompetencia__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>