force-app/main/default/objects/OrcamentoCompetencia__c/fields/SaldoReceita__c.field-meta.xml
<CustomField>
    <fullName>SaldoReceita__c</fullName>
    <formula>ReceitaPrevista__c - ReceitaRealizada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de Receita a Receber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>