force-app/main/default/objects/OrcamentoCompetencia__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Serviço</label>
    <type>Lookup</type>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Orçamentos de Competência (Geral)</relationshipLabel>
    <relationshipName>OrcamentosCompetenciaGeral</relationshipName>
</CustomField>